fixed gap in header

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,17 +12,13 @@
 .header__left {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 50px;
 }
 
 .header__right {
   display: flex;
   align-items: center;
   gap: 20px;
-}
-
-.header__logo {
-  margin-right: 60px;
 }
 
 .header__date-and-location {
